# game-deal-notifier

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml
.github/workflows/: mypy.yml
telegram_bot/: Dockerfile  pyproject.toml
telegram_bot/src/: config.py  main.py
telegram_bot/src/commands/: __init__.py  current_giveaways.py  start.py  unkown.py
telegram_bot/src/commands/subscription/: __init__.py  common.py  subscribe.py  unsubscribe.py
telegram_bot/src/decorators/: validate_allowed_chats.py
telegram_bot/src/isthereanydeal/: deals_list.py  utils.py
telegram_bot/src/utils/: __init__.py  get_next_time.py  pagination.py  validate_allowed_chats.py
