[project]
name = "telegram_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "galst1234", email = "12615933+galst1234@users.noreply.github.com"},
]
dependencies = ["python-telegram-bot~=21.10"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
